# image_processing

./: .gitignore  README.md
colorization/colorization_using_optimization/: CMakeLists.txt  run.sh
colorization/colorization_using_optimization/src/: colorize.cpp
compression/svd_compression/: CMakeLists.txt
compression/svd_compression/src/: run.bat  svd_compression.cpp
dehaze/fast_cap/: cap_dehazing.py  prior.py
dehaze/fast_cap/cpp_extensions/ctypes/: example.c  example.py
dehaze/fast_cap/cpp_extensions/pybind11/: .appveyor.yml  CMakeLists.txt  make.sh  setup.py
dehaze/fast_cap/cpp_extensions/pybind11/docs/: cmake_example.rst  conf.py  index.rst  make.bat
dehaze/fast_cap/cpp_extensions/pybind11/pybind11/docs/: basics.rst  compiling.rst
dehaze/fast_cap/cpp_extensions/pybind11/src/: main.cpp
dehaze/fast_cap/cpp_extensions/pybind11/tests/: test_basic.py
dehaze/fast_cap/training/: make_hazy.py  train.py  train_mse.py
dehaze/single_dehaze_he/: CMakeLists.txt  run.sh
dehaze/single_dehaze_he/include/: cv_engine.h  dark_channel_prior.h
dehaze/single_dehaze_he/src/: dark_channel_prior.cpp  dehaze_demo.cpp
denoise/anisotropic_diffusion/: CMakeLists.txt  run.sh
denoise/anisotropic_diffusion/src/: anisotropic_diffusion_demo.cpp
denoise/bilateral_filter/: .gitignore  CMakeLists.txt  README.md
denoise/bilateral_filter/include/: cuda_helper.hpp
denoise/bilateral_filter/src/: bilateral_filter.cpp  bilateral_filter.cu  run.sh
denoise/bilateral_grid/cpu/: CMakeLists.txt  run.sh
denoise/bilateral_grid/cpu/src/: bilateral_filter.cpp  bilateral_grid.cpp  fast_bilateral_approximation.cpp  run.bat
denoise/bilateral_grid/python/: example.c  example.py  example_color.py  fast_bilateral_approximation.cpp  make.sh
denoise/gaussi_filter/: CMakeLists.txt  README.md
denoise/gaussi_filter/include/: faster_gaussi_filter.h  gaussi_filter.h
denoise/gaussi_filter/src/: faster_gaussi_filter.cpp  gaussi_demo.cpp  gaussi_filter.cpp  run.bat
denoise/guided_filter/: CMakeLists.txt  README.md  run.sh
denoise/guided_filter/images/markdown/: crop.py
denoise/guided_filter/src/: bilateral_filter.cpp  guided_demo.cpp  guided_filter.cpp  guided_filter_padded.cpp  run.bat
denoise/non_local_means/cpu/: CMakeLists.txt  run.sh
denoise/non_local_means/cpu/include/: non_local_means.h
denoise/non_local_means/cpu/src/: fast_non_local_means.cpp  fast_non_local_means_2.cpp  non_local_means.cpp  non_local_means_demo.cpp  run.bat
denoise/non_local_means/cuda/: CMakeLists.txt  run.sh
denoise/non_local_means/cuda/include/: cuda_helper.hpp  non_local_means.h
denoise/non_local_means/cuda/src/: non_local_means.cu  non_local_means_demo.cpp
detection/SUSAN/: CMakeLists.txt  run.sh
detection/SUSAN/src/: susan_demo.cpp
detection/canny/: CMakeLists.txt  run.sh
detection/canny/include/: canny.h
detection/canny/src/: canny.cpp  canny_demo.cpp  run.bat
detection/harris/: CMakeLists.txt  run.sh
detection/harris/src/: harris_demo.cpp  run.bat
detection/laplace/: CMakeLists.txt  run.sh
detection/laplace/include/: laplace_of_gaussi.h
detection/laplace/src/: blob_detection.cpp  laplace_demo.cpp  laplace_of_gaussi.cpp
detection/laplace_pyramid/: CMakeLists.txt  run.sh
detection/laplace_pyramid/images/output/compression/1/: compressed  reconstructed
detection/laplace_pyramid/src/: laplace_pyramid.cpp
detection/sift/cpu/: CMakeLists.txt  run.sh
detection/sift/cpu/src/: run.bat  sift.cpp  sift_2.cpp  sift_3.cpp
editing/possion_image_editing/: CMakeLists.txt  run.sh
editing/possion_image_editing/src/: possion_image_editing_demo.cpp
filter/max_min_filter/2022.10/: example.py  make.sh  run.cpp
filter/max_min_filter/2022.5/: CMakeLists.txt
filter/max_min_filter/2022.5/include/: utils.h
filter/max_min_filter/2022.5/src/: max_min_filter.cpp
filter/max_min_filter/2022.5/src/matlab/: backup.c  fast_min_filtering.c  fast_min_filtering_1D.c  min_rgb.c
filter/max_min_filter/2022.5/src/python/: example.c  example.py
filter/mean_filter/: mean_filter.cpp
fusion/exposure_fusion/: CMakeLists.txt  run.sh
fusion/exposure_fusion/src/: exposure_fusion.cpp  exposure_fusion.py  run.bat
geometry/affine_transformation/rotation/: crane_affine.cpp  run.py  run_bilinear.py
geometry/ransac/demo/: demo.py
hdr/bilateral_hdr/: CMakeLists.txt  run.sh
hdr/bilateral_hdr/images/input/: groveC.hdr  rosette.hdr  vinesunset_2.hdr
hdr/bilateral_hdr/src/: bilateral_hdr.cpp
interpolation/bicubic/: CMakeLists.txt
interpolation/bicubic/src/: bicubic.cpp
interpolation/bilinear/: CMakeLists.txt
interpolation/bilinear/src/: bilinear.cpp
interpolation/joint_bilateral_upsampling/: crane_upsample.cpp  run.py  run_sparse.py
interpolation/joint_bilateral_upsampling/images/sample_1/: forward_flow.npy
low-light/HE/: CMakeLists.txt  README.md  run.sh
low-light/HE/include/: histogram_equalization.h
low-light/HE/src/: histogram_equalization.cpp  histogram_equalization_demo.cpp
low-light/datasets/NPE/: xx
low-light/dong/: CMakeLists.txt  run.sh
low-light/dong/src/: dong_lowlight.cpp  guided_filter.hpp  run.bat
low-light/msrcr/: MSRCR.py
matting/bayers_matting/linux/: CMakeLists.txt  run.sh
matting/bayers_matting/linux/src/: bayers_matting.cpp
matting/bayers_matting/windows/: CMakeLists.txt  run.sh
matting/bayers_matting/windows/include/: guided_filter.h
matting/bayers_matting/windows/src/: bayers_matting.cpp
quality_metrics/: CMakeLists.txt
quality_metrics/src/: compare.cpp
segmentation/super_pixel/SLIC/papers/: official_website
tools/google_benchmark/: 安装文档.md
tools/google_benchmark/demo1/: xmake.lua
tools/google_benchmark/demo1/src/: test.cpp
tools/xmake/demo1/: run.sh  xmake.lua
tools/xmake/demo1/include/: possion_editing.h
tools/xmake/demo1/src/: possion_editing_inplementation.cpp  run.cpp  run_possion_editing.cpp
